# HyDe

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  benchmarking.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: .gitignore
docs/: conf.py  index.md
hyde/: __init__.py  dwt3d.py  hyminor.py  hyres.py  utils.py
notebooks/: template.ipynb
pretrained-models/: README.md
pretrained-models/memnet3d/: hyde-bs16-blindSNR-gaussian-memnet3d-l2.pth  hyde-bs16-blindinc-gaussian-memnet3d-l2.pth  memnet3d_gauss-l2.pth
pretrained-models/qrnn2d/: hyde-bs16-blindSNR-gaussian-qrnn2d-l2.pth  hyde-bs16-blindinc-gaussian-qrnn2d-l2.pth  qrnn2d_gauss-l2.pth
scripts/: train_model.py
src/hyde/: __init__.py  dct.py  dwt3d.py  fast_hyde.py  fast_hyin.py  forpdn.py  hyminor.py  hyres.py  l1hymixde.py  otvca.py  utils.py  wsrrr.py
src/hyde/bm3d/: __init__.py  bm3d.py  filtering.py  utils.py
src/hyde/cpp/: setup.py  split_bregman.cpp
src/hyde/lowlevel/: README.md  __init__.py  add_noise.py  dwt3d.py  logging.py  utils.py
src/hyde/nn/: README.md  __init__.py  call_nn_inference.py  comm.py  dataset_utils.py  general_nn_utils.py  helper.py  hsi_denoising_complex.py  hsi_denoising_gauss.py  nn_utils.py  parsers.py  requirements.txt  training_utils.py
src/hyde/nn/datasets/: dataset_utils.py  transforms.py
src/hyde/nn/models/: __init__.py  denet.py  memnet.py
src/hyde/nn/models/qrnn/: combinations.py  qrnn3d.py  redc3d.py  resnet.py
src/hyde/nn/qrnn3d/: .gitignore  README.md  create_lmdb_database.py  dataset_utils.py  helper.py  hsi_denoising_complex.py  hsi_denoising_gauss.py  lmdb_dataset.py  training_utils.py  utils.py
src/hyde/nn/qrnn3d/models/: __init__.py  denet.py
src/hyde/nn/qrnn3d/models/qrnn/: __init__.py  qrnn3d.py
src/hyde/nn/qrnn3d/utility/: dataset.py  lmdb_data.py  lmdb_dataset.py
src/hyde/spatial_domain/: __init__.py  fast_hyde.py  fast_hyin.py  l1hymixde.py
src/hyde/transform_domain/: README.md  __init__.py  forpdn.py  hyminor.py  hyres.py  otvca.py  wsrrr.py
tests/: conftest.py
